--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "keen-slider": "^6.8.6",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.12",
     "react-range": "^1.10.0",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/leaflet": "^1.9.17",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-google-recaptcha": "^2.1.9",
