--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/html-pdf": "^3.0.3",
+    "html2pdf.js": "^0.10.3",
     "keen-slider": "^6.8.6",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.487.0",
@@ -18,6 +20,8 @@
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.3",
+    "react-pageflip": "^2.0.3",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.12",
     "react-range": "^1.10.0",
@@ -34,6 +38,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-google-recaptcha": "^2.1.9",
+    "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
     "@types/react-slider": "^1.3.6",
     "@types/swiper": "^5.4.3",
