--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/html-pdf": "^3.0.3",
+    "axios": "^1.9.0",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "keen-slider": "^6.8.6",
