--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/html-pdf": "^3.0.3",
     "axios": "^1.9.0",
+    "helmet": "^8.1.0",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "keen-slider": "^6.8.6",
@@ -20,12 +22,14 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.3",
     "react-pageflip": "^2.0.3",
     "react-phone-input-2": "^2.15.1",
     "react-phone-number-input": "^3.4.12",
+    "react-quill": "^2.0.0",
     "react-range": "^1.10.0",
     "react-router-dom": "^7.4.1",
     "react-slick": "^0.30.3",
@@ -41,6 +45,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-google-recaptcha": "^2.1.9",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
     "@types/react-slider": "^1.3.6",
